homevent (0.2.4) unstable; urgency=low

  * Fixed packaging.

 -- Matthias Urlichs <matthias@urlichs.de>  Tue, 20 Nov 2007 11:02:48 +0100

homevent (0.2.3) unstable; urgency=low

  * Started moving to @inlineCallbacks style where appropriate
  * Allow incoming network connections
  * Generate something that looks like a proper Python egg
    and increment the version number

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 19 Nov 2007 08:35:05 +0100

homevent (0.2.2) unstable; urgency=low

  * Found a deadlock
  * cleaned up onewire error handling
  * minor ssh fix
  * show if a monitor is currently hard at work
  * more TODOs. :-/

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 18 Nov 2007 15:23:31 +0100

homevent (0.2.1) unstable; urgency=low

  * Syslog.

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 18 Nov 2007 11:00:34 +0100

homevent (0.2) unstable; urgency=low

  * Initial Release.

 -- Matthias Urlichs <matthias@urlichs.de>  Sat, 17 Nov 2007 12:42:36 +0100